# scrolls

./: CLAUDE.md  README.md  pyproject.toml
scrolls/: __init__.py
scrolls/other/: README.md  SKILL.md
scrolls/other/cdn-detection/: SKILL.md
scrolls/other/cdn-detection/reference/: dns-patterns.md  http-patterns.md  ssl-patterns.md
scrolls/other/email-auth/: SKILL.md
scrolls/other/email-auth/reference/: audit-workflow.md  dkim.md  dmarc.md  spf.md
scrolls/other/email-auth/scripts/: check-email-auth.sh
scrolls/other/http-recon/: SKILL.md
scrolls/other/http-recon/reference/: fingerprinting.md  redirects.md  security-headers.md
scrolls/other/migration-planner/: SKILL.md
scrolls/other/migration-planner/reference/: phases.md  pitfalls.md
scrolls/other/migration-planner/scripts/: pre-migration-audit.sh
scrolls/other/pentest/: SKILL.md
scrolls/other/pentest/reference/: dns-zone-security.md  email-auth-deep.md  exposure-report.md  http-security.md  infrastructure-recon.md  ssl-tls.md  subdomain-takeover.md
scrolls/other/pentest/scripts/: infrastructure-recon.sh  (+2 more)
scrolls/other/phishing-analysis/: SKILL.md
scrolls/other/portfolio-audit/: SKILL.md
scrolls/other/reference/: error-handling.md
scrolls/other/registration-compliance/: SKILL.md
scrolls/other/rfc-reference/: SKILL.md
scrolls/other/typosquatting/: SKILL.md
scrolls/other/zone-health/: SKILL.md
scrolls/seer/reference/: cli.md  mcp.md  python.md
scrolls/tome/: SKILL.md
seer/: SKILL.md
seer/reference/: api.md  config.md  repl.md
seer/scripts/: examples.sh  setup-completions.sh
(+23 files in other folders)
