[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrolls"
version = "0.1.0"
description = "A collection of skills for working with domain names, designed for use with AI agents"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zac Roach" }]

[tool.hatch.build.targets.wheel]
packages = ["scrolls"]

[tool.hatch.build.targets.wheel.force-include]
"scrolls/seer" = "scrolls/seer"
"scrolls/tome" = "scrolls/tome"
