[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrolls"
version = "0.1.0"
description = "A collection of skills for working with domain names, designed for use with AI agents"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zac Roach" }]

[tool.hatch.build.targets.wheel]
packages = ["scrolls"]

[tool.hatch.build.targets.wheel.force-include]
"scrolls/seer" = "scrolls/seer"
"scrolls/tome" = "scrolls/tome"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["scrolls"]
